--- a/part9/flights-frontend/src/css/base.css
+++ b/part9/flights-frontend/src/css/base.css
@@ -1,3 +1,11 @@
 body {
   font-family: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
 }
+
+.error {
+  color: red;
+}
+
+.error:empty {
+  display: none;
+}
